Fix gross Edge scrollbar

--- a/src/style/scrollbar.css
+++ b/src/style/scrollbar.css
@@ -16,6 +16,4 @@
 
   *::-webkit-scrollbar-thumb {
     background-color: #464646;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
   }
